# Adobe_Hack

./: .dockerignore  .gitignore  Dockerfile  README.md  ReadMe.md  api.py  docker-compose.yaml  docker-compose.yml  export_to_onnx.py  export_to_onnx1.py  main.py  main1.py  main2.py  main3.py  pyproject.toml  requirements.txt  save_tokenizer.py  train_classifier.py  train_classifier1.py  work_check.txt
data/: heading_training_data.json
logs/: logs_duplicates.json  logs_removed.json
models/: heading_classifier.pkl  label_encoder.pkl
