[project]
name = "adobe-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deep-translator>=1.11.4",
    "joblib>=1.5.1",
    "nuitka>=2.7.12",
    "numpy>=2.3.2",
    "onnxruntime>=1.22.1",
    "scikit-learn>=1.7.0",
    "tokenizers>=0.21.2",
    "unstructured[all-docs]>=0.18.11",
]
